# SmartHomeServer

./: .autotools  .cproject  .gitignore  .gitmodules  .project  Makefile.am  NEWS  README  configure.ac
html/: index.html  smarthome.js
html/view/: devices.html  torrents.html
src/: Config.cpp  Config.h  Makefile.am  Torrent.cpp  Torrent.h  VoiceControl.cpp  VoiceControl.h  WebServer.cpp  WebServer.h  config.json  smarthome.cpp
src/X10/: BaseDevice.h  Controller.cpp  Controller.h  MDTx07.cpp  MDTx07.h
